Some Meta Changes

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
     <meta property="og:title" content="Partnerschaft für Kaminkehrer" />
     <meta property="og:description" content="Starke Partnerschaft für Kaminkehrerkollegen - Münchner Energie Agentur" />
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="/lovable-uploads/f72b307a-ea84-457e-bf28-d446d5a38e29.png" />
+    <meta property="og:image" content="/uploads/starke_partnerschaft.jpeg" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@lovable_dev" />
-    <meta name="twitter:image" content="/lovable-uploads/f72b307a-ea84-457e-bf28-d446d5a38e29.png" />
+    <meta name="twitter:site" content="@muechener_energie_agentur" />
+    <meta name="twitter:image" content="/uploads/starke_partnerschaft.jpeg" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
